# idf-build-apps

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  REPOSITORY_QUALITY_ASSESSMENT.md  license_header.txt  pyproject.toml
.github/workflows/: check-pre-commit.yml  docs.yml  issue_comment.yml  new_issues.yml  new_prs.yml  pr-test-summary.yml  publish-bin.yml  publish-pypi.yml  sync-jira.yml  test-build-docs.yml  test-build-idf-apps.yml  test-python-package.yml
docs/: api.rst  cli.rst  conf.py  conf_common.py  config_file.md  find-build.md  find_build.md  index.rst  manifest.md
docs/_static/: theme_overrides.css
docs/en/: conf.py  index.rst
docs/en/explanations/: build.rst  build_status.rst  config_rules.rst  dependency_driven_build.rst  find.rst  find_build.md
docs/en/guides/: custom_app.md
docs/en/migration/: 1.x_to_2.x.md
docs/en/references/: cli.rst  config_file.md  config_file.rst  manifest.md  manifest.rst
idf_build_apps/: __init__.py  __main__.py  app.py  args.py  autocompletions.py  build_apps_args.py  build_job.py  component_targets.py  config.py  constants.py  finder.py  global_config.py  log.py  main.py  plugin.py  session_args.py  utils.py
idf_build_apps/junit/: __init__.py  report.py  utils.py
idf_build_apps/manifest/: __init__.py  if_parser.py  manifest.py  soc_header.py
idf_build_apps/vendors/: pydantic_sources.py
idf_build_apps/yaml/: __init__.py  parser.py
tests/: conftest.py  test_app.py  test_args.py  test_build.py  test_cmd.py  test_disable_reasons.py  test_finder.py  test_manifest.py  test_soc_caps.py  test_utils.py
