[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "idf-build-apps"
authors = [
    {name = "Fu Hanxi", email = "fuhanxi@espressif.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version", "description"]
requires-python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*"

dependencies = [
    "pathlib; python_version < '3.4'",
    "pyparsing",
    "pyyaml",
    "packaging",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
doc = [
    "sphinx",
    # theme
    "sphinx-rtd-theme",
    # extensions
    "sphinx_copybutton",        # copy button
    "myst-parser",              # markdown support
    "sphinxcontrib-mermaid",    # mermaid graph support
]

[project.urls]
homepage = "https://github.com/espressif/idf-build-apps"
repository = "https://github.com/espressif/idf-build-apps"
documentation = "https://docs.espressif.com/projects/idf-build-apps"
changelog = "https://github.com/espressif/idf-build-apps/blob/master/CHANGELOG.md"

[project.scripts]
idf-build-apps = "idf_build_apps:main.main"

[tool.pytest.ini_options]
addopts = "-s --log-cli-level DEBUG"
testpaths = [
    "tests",
]

[tool.isort]
profile = 'black'
force_grid_wrap = 1

[tool.black]
line-length = 120
skip-string-normalization = true
