[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "idf-build-apps"
authors = [
    {name = "Fu Hanxi", email = "fuhanxi@espressif.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version", "description"]
requires-python = ">=3.7"

dependencies = [
    "pyparsing",
    "pyyaml",
    "packaging",
    "toml; python_version < '3.11'",
    "pydantic~=2.0",
    "pydantic_settings",
    "argcomplete>=3",
    "typing-extensions; python_version < '3.11'",
    "esp-bool-parser>=0.1.2,<1",
    # debug/print
    "rich",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
doc = [
    "sphinx",
    # theme
    "sphinx-rtd-theme",
    # extensions
    "sphinx_copybutton",        # copy button
    "myst-parser",              # markdown support
    "sphinxcontrib-mermaid",    # mermaid graph support
    "sphinx-argparse",          # auto-generate cli help message
    "sphinx-tabs",              # tabs
]

[project.urls]
homepage = "https://github.com/espressif/idf-build-apps"
repository = "https://github.com/espressif/idf-build-apps"
documentation = "https://docs.espressif.com/projects/idf-build-apps"
changelog = "https://github.com/espressif/idf-build-apps/blob/main/CHANGELOG.md"

[project.scripts]
idf-build-apps = "idf_build_apps:main.main"

[tool.commitizen]
name = "cz_conventional_commits"
version = "2.11.0"
tag_format = "v$version"
version_files = [
    "idf_build_apps/__init__.py",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.isort]
profile = 'black'
force_grid_wrap = 1

[tool.ruff]
line-length = 120
target-version = "py37"

[tool.ruff.lint]
select = [
    'F',  # Pyflakes
    'E',  # pycodestyle
    'W',  # pycodestyle
#    'C90',  # mccabe
    'I',  # isort
#    'N',  # pep8-naming
#    'D',  # pydocstyle
    'UP',  # pyupgrade
    'YTT',  # flake8-2020
#    'ANN',  # flake8-annotations
#    'ASYNC',  # flake8-async
#    'TRIO',  # flake8-trio
#    'S',  # flake8-bandit
#    'BLE',  # flake8-blind-except
#    'FBT',  # flake8-boolean-trap
#    'B',  # flake8-bugbear
    'A',  # flake8-builtins
#    'COM',  # flake8-commas
#    'CPY',  # flake8-copyright
#    'C4',  # flake8-comprehensions
#    'DTZ',  # flake8-datetimez
#    'T10',  # flake8-debugger
#    'DJ',  # flake8-django
#    'EM',  # flake8-errmsg
#    'EXE',  # flake8-executable
#    'FA',  # flake8-future-annotations
#    'ISC',  # flake8-implicit-str-concat
#    'ICN',  # flake8-import-conventions
#    'G',  # flake8-logging-format
#    'INP',  # flake8-no-pep420
#    'PIE',  # flake8-pie
#    'T20',  # flake8-print
#    'PYI',  # flake8-pyi
#    'PT',  # flake8-pytest-style
#    'Q',  # flake8-quotes
#    'RSE',  # flake8-raise
#    'RET',  # flake8-return
#    'SLF',  # flake8-self
#    'SLOT',  # flake8-slots
#    'SIM',  # flake8-simplify
#    'TID',  # flake8-tidy-imports
#    'TCH',  # flake8-type-checking
#    'INT',  # flake8-gettext
    'ARG',  # flake8-unused-arguments
#    'PTH',  # flake8-use-pathlib
    'TD',  # flake8-todos
    'FIX',  # flake8-fixme
    'ERA',  # eradicate
#    'PD',  # pandas-vet
#    'PGH',  # pygrep-hooks
#    'PL',  # Pylint
#    'TRY',  # tryceratops
#    'FLY',  # flynt
#    'NPY',  # NumPy-specific rules
#    'AIR',  # Airflow
#    'PERF',  # Perflint
    'FURB',  # refurb
    'LOG',  # flake8-logging
    'RUF',  # Ruff-specific rules
]
ignore = [
    # Mutable class attributes should be annotated with `typing.ClassVar`, pydantic model is an exception
    'RUF012',
    # `open` and `read` should be replaced by `Path(f).read_text()`
    'FURB101',
]
typing-modules = [
    "idf_build_apps.utils"
]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.mypy]
python_version = "3.8"
